
* LUCENE-2653: ThaiWordFilter depends on the JRE having a Thai dictionary, which is not
  always the case. If the dictionary is unavailable, the filter will now throw 
  UnsupportedOperationException in the constructor.  (Robert Muir)

* LUCENE-2616: FastVectorHighlighter: out of alignment when the first value is
  empty in multiValued field (Koji Sekiguchi)
   
API Changes

 * LUCENE-2147: Spatial GeoHashUtils now always decode GeoHash strings
   with full precision. GeoHash#decode_exactly(String) was merged into
   GeoHash#decode(String). (Chris Male, Simon Willnauer)
   
 * LUCENE-2204: Change some package private classes/members to publicly accessible to implement
   custom FragmentsBuilders. (Koji Sekiguchi)

 * LUCENE-2055: Integrate snowball into contrib/analyzers. SnowballAnalyzer is
   now deprecated in favor of language-specific analyzers which contain things
   such as stopword lists and any language-specific processing in addition to
   stemming. Add Turkish and Romanian stopwords lists to support this.
   (Robert Muir, Uwe Schindler, Simon Willnauer)

 * LUCENE-2603: Add setMultiValuedSeparator(char) method to set an arbitrary
   char that is used when concatenating multiValued data. Default is a space
   (' '). It is applied on ANALYZED field only. (Koji Sekiguchi)

 * LUCENE-2626: FastVectorHighlighter: enable FragListBuilder and FragmentsBuilder
   to be set per-field override. (Koji Sekiguchi)

 * LUCENE-2712: FieldBoostMapAttribute in contrib/queryparser was changed from 
   a Map<CharSequence,Float> to a Map<String,Float>. Per the CharSequence javadoc,
   CharSequence is inappropriate as a map key. (Robert Muir)

 * LUCENE-1937: Add more methods to manipulate QueryNodeProcessorPipeline elements.
   QueryNodeProcessorPipeline now implements the List interface, this is useful
   if you want to extend or modify an existing pipeline. (Adriano Crestani via Robert Muir)
    
New features
